# pdf-chunker

./: .gitignore  Pipfile  README.ja.md  README.md  pdf-chunker.py  pyproject.toml
.github/workflows/: ci.yml
example/: Dockerfile.callback  docker-compose.yml
pdf_chunker/: cli.py  core.py  fonts.py  images.py
pdf_image_dumper/: runner.py
