[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf_chunker"
version = "0.1.0"
description = "Small CLI to chunk PDF files and downsample embedded images"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [ { name = "Your Name", email = "you@example.com" } ]

dependencies = [
  "pikepdf>=6.0.0",
  "Pillow>=9.0.0"
]

[project.scripts]
pdf-chunker = "pdf_chunker.cli:main"

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
exclude = ["output", "output.*"]
